# ecoweb

./: .gitignore  Cargo.toml  README.md  serve.sh
.forgejo/workflows/: check.yaml  demo.yaml
scripts/: flamegraph.sh  serve.sh
src/: cache.rs  config.rs  dispatch.rs  endpoints.rs  errors.rs  form.rs  loader.rs  mail.rs  main.rs  page.rs  post.rs  protection.rs  render.rs  scss.rs  setup.rs  storage.rs  upload.rs
src/endpoints/: githook.rs
src/extensions/: addendpoint.rs  githook.rs  hireme.rs  humans.rs  mod.rs  rss.rs  savedata.rs  webring.rs
src/loader/: post_loader.rs
src/loader/storage/: local_storage.rs  mod.rs
src/render/: context.rs  markdown.rs  mod.rs  nav.rs  tera_wrapper.rs
src/routes/: data_extract.rs  mod.rs  request_handler.rs  responder.rs  static_files.rs  upload.rs
src/storage/: context.rs  data.rs  mod.rs  query.rs
src/storage/backend/: local.rs  mod.rs
tools/: decode_mailed_data.rs
