[package]
name = "ecoweb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
base64 = "0.22.0"
bincode = "1.3.3"
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.3"
grass = "0.13.2"
lettre = "0.11.6"
log = "0.4.21"
mdtrans = "0.1.5"
mime_guess = "2.0.4"
minifier = "0.3.0"
parking_lot = "0.12.1"
path-absolutize = "3.1.1"
rand = "0.8.5"
rsa = "0.9.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
syntect = { version = "5.2.0", features = ["html", "regex-onig", "default-syntaxes", "default-themes"] }
tera = "1.19.1"
toml = "0.8.10"

# Minification

[features]
default = [ "storage-local", "minify"] #"dev" ]
dev = ["hot-reloading"]
hot-reloading = []

# Local storage
storage-local = []

# Minification
minify = [ "css_minify", "js_minify"]
css_minify = []
js_minify = []

[profile.release]
opt-level = 3
strip = "symbols"
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 4

[profile.dev]
codegen-units = 425 # 250

[profile.dev.package."*"]
opt-level = 3
codegen-units = 32
