[package]
name = "ecoweb"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
grass = "0.13.4"
lettre = "0.11.11"
log = "0.4.22"
mdtrans = "0.1.6"
mime_guess = "2.0.5"
minifier = "0.3.2"
parking_lot = "0.12.3"
path-absolutize = "3.1.1"
rand = "0.8.5"
rsa = "0.9.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
syntect = { version = "5.2.0", features = ["html", "regex-onig", "default-syntaxes"] }
tera = "1.20.0"
toml = "0.8.19"

# Minification
minify-html = "0.15.0"

[features]
default = [ "storage-local", "minify"] #"dev" ]
dev = ["hot-reloading"]
hot-reloading = []

# Local storage
storage-local = []

# Minification
minify = [ "css_minify", "js_minify", "html_minify"]
css_minify = []
js_minify = []
html_minify = []

[profile.release]
opt-level = 3
strip = "symbols"
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 4

[profile.dev]
codegen-units = 425 # 250

[profile.dev.package."*"]
opt-level = 3
codegen-units = 32
