[package]
name = "ecoweb"
version = "0.2.1"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
env_logger = "0.11.8"
grass = "0.13.4"
log = "0.4.27"
mdtrans = "0.1.8"
# mdtrans = { path = "../mdtrans" }
mime_guess = "2.0.5"
minifier = "0.3.5"
parking_lot = "0.12.4"
path-absolutize = "3.1.1"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syntect = { version = "5.2.0", features = ["html", "regex-onig", "default-syntaxes"] }
tera = "1.20.0"
toml = "0.8.22"

# Minification
minify-html = "0.15.0"

[features]
default = [ "storage-local", "minify"] #"dev" ]
dev = ["hot-reloading"]
hot-reloading = []

# Local storage
storage-local = []

# Minification
minify = [ "css_minify", "js_minify", "html_minify"]
css_minify = []
js_minify = []
html_minify = []

[profile.release]
opt-level = 3
strip = "symbols"
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 4

[profile.dev]
codegen-units = 425 # 250

[profile.dev.package."*"]
opt-level = 3
codegen-units = 32
